--- a/client/src/assets/css/fonts.css
+++ b/client/src/assets/css/fonts.css
@@ -5,3 +5,27 @@
   font-style: normal;
   src: url('../fonts/Roboto-Regular.ttf') format('ttf');
 }
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+  src: url('../fonts/Roboto-Medium.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+  src: url('../fonts/Roboto-Bold.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 900;
+  font-display: swap;
+  font-style: normal;
+  src: url('../fonts/Roboto-Black.ttf') format('ttf');
+}
